testsuite/tests/typing-recmod/t14bad.compilers.reference
File "t14bad.ml", line 18, characters 2-45:
18 |   module rec U : (T with type D.t = U'.t) = U
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The definition of "U.D.t" contains a cycle:
         "U'.t" = "U'.t",
         "U'.t" = "U'.t"
